# documentacao_banco_dados_cdd

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml
auditoria/: index.html
backup_banco/: index.html
carregamento_dados/: index.html
configuracao_github/: index.html
dados/: index.html
docs/: auditoria.md  backup_banco.md  configuracao_github.md  dados.md  funcoes_cdd.md  index.md  introducao_views.md  sharepoint_downloader.md  update_dim_cddd.md  update_extras_acesso_scd.md  update_fato_cdd.md  update_fato_td.md  update_pbm.md  update_ticket_medio.md  views.md
funcoes_cdd/: index.html
introducao_views/: index.html
projeto_banco_dados/: index.html
search/: search_index.json
sharepoint_downloader/: index.html
site/: 404.html  index.html
site/configuracao_github/: index.html
site/dados/: index.html
site/funcoes_cdd/: index.html
site/search/: search_index.json
site/sharepoint_downloader/: index.html
site/update_dim_cddd/: index.html
site/update_fato_cdd/: index.html
site/update_fato_td/: index.html
site/update_pbm/: index.html
site/update_ticket_medio/: index.html
site/views/: index.html
update_dim_cddd/: index.html
update_extras_acesso_scd/: index.html
update_fato_cdd/: index.html
update_fato_td/: index.html
update_pbm/: index.html
update_ticket_medio/: index.html
views/: index.html
