[tool.poetry]
name = "documentacao-banco-dados-cdd"
version = "0.1.0"
description = ""
authors = ["easelabs-analytics <easelabs.analytics@gmail.com>"]
package-mode = false



[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.3"
mkdocstrings = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
